# SKA2000_Code

./: CMakeLists.txt  README.md  toolchain.cmake
conf/: app_config.xml  zlog.conf
include/: main.h
include/comm_module/: SKA_CommunicationInterface.h  SKA_DebugServerThread.h  SKA_ReceiveFromPlcThread.h  SKA_SendToPlcThread.h
include/control_module/: SKA_AntiswayController.h  SKA_AssistAntiswayController.h  SKA_CannotDriveErrorDetector.h  SKA_CircularBuffer.h  SKA_Constants.h  SKA_ControlThread.h  SKA_DoubleSshapedTrace.h  SKA_HoistUnitTracePlanner.h  SKA_HoistUnitTrackingController.h  SKA_HorizontalCollisonFreeTracePlanner.h  SKA_InertialFilter.h  SKA_InputShaper.h  SKA_QuickStopTracePlanner.h  SKA_RateLimiter.h  SKA_RiseEdgeDetector.h  SKA_Saturation.h  SKA_Timer.h  SKA_TraceSegment.h  SKA_TravelUnitTracePlanner.h  SKA_TravelUnitTrackingController.h  SKA_UnshapedTracePlanner.h  SKA_Utils.h  SKA_VerticalCollisionFreeTracePlanner.h  SKA_ZeroManualDetector.h  SKA_ZeroSpeedDetector.h
include/others/: SKA_Configurer.h  SKA_Logger.h  SKA_ThreadSafety.h  SKA_Version.h
src/: main.c
src/comm_module/: SKA_CommunicationInterface.c  SKA_DebugServerThread.c  SKA_ReceiveFromPlcThread.c  SKA_SendToPlcThread.c
src/control_module/: SKA_AntiswayController.c  SKA_AssistAntiswayController.c  SKA_CannotDriveErrorDetector.c  SKA_CircularBuffer.c  SKA_Constants.c  SKA_ControlThread.c  SKA_DoubleSshapedTrace.c  SKA_HoistUnitTracePlanner.c  SKA_HoistUnitTrackingController.c  SKA_HorizontalAvoidanceTask.c  SKA_HorizontalCollisonFreeTracePlanner.c  SKA_InertialFilter.c  SKA_InputShaper.c  SKA_QuickStopTracePlanner.c  SKA_RateLimiter.c  SKA_RiseEdgeDetector.c  SKA_Saturation.c  SKA_Timer.c  SKA_TraceSegment.c  SKA_TravelUnitTracePlanner.c  SKA_TravelUnitTrackingController.c  SKA_UnshapedTracePlanner.c  SKA_Utils.c  SKA_VerticalAvoidanceTask.c  SKA_VerticalCollisionFreeTracePlanner.c  SKA_ZeroManualDetector.c  SKA_ZeroSpeedDetector.c
src/others/: SKA_Configurer.c  SKA_Logger.c  SKA_ThreadSafety.c
